# ifmo_mtt

./: .gitignore  README.md
lab1/: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  appendix  main.cpp  matrixs.hpp  utils.hpp
lab2/: inpitCoefs.txt  inputMat.txt  jacobi.hpp  lab2.vcxproj  lab2.vcxproj.filters  main.cpp  outputMatrix.txt  utils.hpp
lab2/data/: 300coefs.txt  300matrix.txt  4000coefs.txt  800matrix.txt
lab2/x64/Release/: lab2.ilk
lab2/x64/Release/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab2_reforge/: inpitCoefs.txt  inputMat.txt  jacobi.hpp  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters  main.cpp  outputMatrix.txt  utils.hpp
lab2_reforge/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate
lab2_reforge/data/: 2000output.txt  300output.txt  4000output.txt  800coefs.txt  800output.txt
lab2_reforge/x64/Debug/: 2000coefs.txt  300out.txt  addd.txt  asd.txt  inputCoefs.txt  inputMat.txt  lab2.ilk  main.obj.enc  ouputMatrix.txt  vc141.idb
lab2_reforge/x64/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  (+3 more)
lab2_reforge/x64/Release/: 2000output.txt  lab2.ilk
lab4/: CMakeLists.txt  main.cpp  utils.hpp
lab5/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pom.xml
lab5/hadoop/: hadoop-env.sh  spark-env.sh
lab5/results/: first.md  second.md  third.md
lab5/scripts/: results.sh  standalone.sh  start.sh  stop.sh  update_jessie.sh  yarn.sh
logcalc/: runner.sh
(+11 files in other folders)
